fix sharing link on iOS, role linking in about-us

--- a/src/component/SeedData/SeedData.css
+++ b/src/component/SeedData/SeedData.css
@@ -1,5 +1,4 @@
-.SeedDataContainer {
-  /* background: #000 url("../../static/images/acdc.jpg") no-repeat center top; */
+.seedDataContainer {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
